fix(layout): Ensure that Markdown code blocks do wrap text
ref: #26 #27 nofusscomputing/centurion_erp#248 nofusscomputing/centurion_erp#388

--- a/src/index.css
+++ b/src/index.css
@@ -1038,10 +1038,12 @@ span.badge span.badge-icon.ticket-status-icon-testing svg {
   color: var(--text-colour);
   padding: 5px;
   border: 1px solid var(--border-colour);
-  display: inline-block;
-  width: 95%;
+  display:block;
+  width: 99%;
   word-wrap: break-word;
   white-space: pre-wrap;
+  overflow-wrap: anywhere;
+  margin: 0px auto;
 }
 
 .hljs-comment,
